Use avatarData in PATCH /user/:username
