# backend/src/types/users.ts
@@ -23,16 +23,6 @@ export interface UserModificationParams {
   firstName?: string;
   lastName?: string;
   description?: string;
-  avatarReference?: string;
-}
-
-// TODO : Rename to UserModificationParams and use this one
-export interface UploadUserModificationParams {
-  email?: string;
-  phoneNumber?: string;
-  firstName?: string;
-  lastName?: string;
-  description?: string;
   avatarData?: string;
   avatarReference?: string;
 }
